# datatree

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  conanfile.py
.github/conan/: release
.github/workflows/: cmake-single-platform.yml  codeql.yml
cmake/: utilities.cmake
include/data_tree/: data_tree.hpp
include/data_tree/common/: common.hpp
include/data_tree/error/: error_type.hpp
include/data_tree/node_types/detail/: array_node_type.hpp  object_node_type.hpp  value_node_type.hpp
include/data_tree/node_types/detail/value_types/: number_type.hpp  value_types.hpp
include/data_tree/tree_node/: tree_node.hpp
include/datatree/: common.hpp  data_tree.hpp  datatree.hpp  tree_node.hpp
include/datatree/error/: error_type.hpp
include/datatree/node_types/: array_node.hpp  array_node_type.hpp  node_types.inl  object_node.hpp  object_node_type.hpp  value_node.hpp  value_node_type.hpp
include/datatree/node_types/detail/: array_node_type.hpp  null_type.hpp  number_type.hpp  object_node_type.hpp  value_node_type.hpp  value_types.hpp
source/datatree/: datatree.cpp  tree_node.cpp
source/datatree/node_types/: array_node.cpp  object_node.cpp  value_node.cpp
source/sample/: main.cpp
test/: CMakeLists.txt  unit_test_array_node.cpp  unit_test_array_node_type.cpp  unit_test_common.cpp  unit_test_data_tree.cpp  unit_test_datatree.cpp  unit_test_error_type.cpp  unit_test_null_type.cpp  unit_test_number_type.cpp  unit_test_object_node.cpp  unit_test_object_node_type.cpp  unit_test_tree_node.cpp  unit_test_value_node.cpp  unit_test_value_node_type.cpp  unit_test_value_types.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
